<?xml version="1.0"?>
<package format="3">
  <n>ur5e_bin_picking</n>
  <version>1.0.0</version>
  <description>Vision-guided bin picking with UR5e</description>
  <maintainer email="student@university.edu">Student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>ur5e_bin_picking_description</depend>
  <depend>ur5e_bin_picking_moveit_config</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
