<?xml version="1.0"?>
<package format="3">
  <name>ur5e_bin_picking_description</name>
  <version>1.0.0</version>
  <description>URDF/Xacro workcell description for UR5e bin picking</description>
  <maintainer email="student@university.edu">Student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ur_description</depend>
  <depend>robotiq_description</depend>
  <depend>rviz2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
